--- a/app/views/concerts/new.html.erb
+++ b/app/views/concerts/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Concert</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', concerts_path %>
+<%- model_class = Concert -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
