--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -1,24 +1,25 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Concert -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>Artist:</strong>
-  <%= @concert.artist %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:artist) %>:</strong></dt>
+  <dd><%= @concert.artist %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:venue) %>:</strong></dt>
+  <dd><%= @concert.venue %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:date) %>:</strong></dt>
+  <dd><%= @concert.date %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:user_id) %>:</strong></dt>
+  <dd><%= @concert.user_id %></dd>
+</dl>
 
-<p>
-  <strong>Venue:</strong>
-  <%= @concert.venue %>
-</p>
-
-<p>
-  <strong>Date:</strong>
-  <%= @concert.date %>
-</p>
-
-<p>
-  <strong>User:</strong>
-  <%= @concert.user %>
-</p>
-
-<%= link_to 'Edit', edit_concert_path(@concert) %> |
-<%= link_to 'Back', concerts_path %>
+<%= link_to t('.back', :default => t("helpers.links.back")),
+              concerts_path, :class => 'btn btn-default'  %>
+<%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_concert_path(@concert), :class => 'btn btn-default' %>
+<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              concert_path(@concert),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
