--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -13,6 +13,8 @@
       <%= f.submit "Log In", class:"btn btn-primary" %>
     <% end %>
     <br>
-    <p>New user? <%= link_to "Sign up now!" %></p>
+    <p class="new-user">New user? <%= link_to "Sign up now!", new_user_path %></p>
   </div>
 </div>
+
+<div id="user-modal" class="modal fade"></div>
