--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,55 +1,59 @@
-<%= form_for @user, :html => { :class => "form-horizontal user" } do |f| %>
+<div class="modal-dialog">
+  <div class="modal-content">
+    <%= form_for @user, :html => { :class => "form-horizontal user" } do |f| %>
 
-  <% if @user.errors.any? %>
+    <% if @user.errors.any? %>
     <div id="error_expl" class="panel panel-danger">
       <div class="panel-heading">
         <h3 class="panel-title"><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h3>
       </div>
       <div class="panel-body">
         <ul>
-        <% @user.errors.full_messages.each do |msg| %>
+          <% @user.errors.full_messages.each do |msg| %>
           <li><%= msg %></li>
-        <% end %>
+          <% end %>
         </ul>
       </div>
     </div>
-  <% end %>
+    <% end %>
 
-  <div class="form-group">
-    <%= f.label :name, :class => 'control-label col-lg-2' %>
-    <div class="col-lg-10">
-      <%= f.text_field :name, :class => 'form-control' %>
+    <div class="form-group">
+      <%= f.label :name, :class => 'control-label col-lg-2' %>
+      <div class="col-lg-10">
+        <%= f.text_field :name, :class => 'form-control' %>
+      </div>
+      <%=f.error_span(:name) %>
     </div>
-    <%=f.error_span(:name) %>
-  </div>
-  <div class="form-group">
-    <%= f.label :username, :class => 'control-label col-lg-2' %>
-    <div class="col-lg-10">
-      <%= f.text_field :username, :class => 'form-control' %>
+    <div class="form-group">
+      <%= f.label :username, :class => 'control-label col-lg-2' %>
+      <div class="col-lg-10">
+        <%= f.text_field :username, :class => 'form-control' %>
+      </div>
+      <%=f.error_span(:username) %>
     </div>
-    <%=f.error_span(:username) %>
-  </div>
-  <div class="form-group">
-    <%= f.label :email, :class => 'control-label col-lg-2' %>
-    <div class="col-lg-10">
-      <%= f.text_field :email, :class => 'form-control' %>
+    <div class="form-group">
+      <%= f.label :email, :class => 'control-label col-lg-2' %>
+      <div class="col-lg-10">
+        <%= f.text_field :email, :class => 'form-control' %>
+      </div>
+      <%=f.error_span(:email) %>
     </div>
-    <%=f.error_span(:email) %>
-  </div>
-  <div class="form-group">
-    <%= f.label :password, :class => 'control-label col-lg-2' %>
-    <div class="col-lg-10">
-      <%= f.text_field :password, :class => 'form-control' %>
+    <div class="form-group">
+      <%= f.label :password, :class => 'control-label col-lg-2' %>
+      <div class="col-lg-10">
+        <%= f.text_field :password, :class => 'form-control' %>
+      </div>
+      <%=f.error_span(:password) %>
     </div>
-    <%=f.error_span(:password) %>
-  </div>
 
-  <div class="form-group">
-    <div class="col-lg-offset-2 col-lg-10">
-      <%= f.submit nil, :class => 'btn btn-primary' %>
-      <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                users_path, :class => 'btn btn-default' %>
+    <div class="form-group">
+      <div class="col-lg-offset-2 col-lg-10">
+        <%= f.submit nil, :class => 'btn btn-primary' %>
+        <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+        users_path, :class => 'btn btn-default' %>
+      </div>
     </div>
-  </div>
 
-<% end %>
+    <% end %>
+  </div>
+</div>
