update paths and views  on user profile page and add concert search page, removed render form for add concert page

--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -15,7 +15,7 @@
 </dl>
 
 <%= link_to t('.back', :default => t("helpers.links.back")),
-              concerts_path, :class => 'btn btn-default'  %>
+              user_concerts_path, :class => 'btn btn-default'  %>
 <%= link_to t('.edit', :default => t("helpers.links.edit")),
               edit_concert_path(@concert), :class => 'btn btn-default' %>
 <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
