--- a/app/views/concerts/_index.html.erb
+++ b/app/views/concerts/_index.html.erb
@@ -9,8 +9,8 @@
       <th><%= model_class.human_attribute_name(:artist) %></th>
       <th><%= model_class.human_attribute_name(:venue) %></th>
       <th><%= model_class.human_attribute_name(:date) %></th>
-      <th><%= model_class.human_attribute_name(:user_id) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
+
+
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
@@ -21,11 +21,7 @@
         <td><%= concert.artist %></td>
         <td><%= concert.venue %></td>
         <td><%= concert.date %></td>
-        <td><%= concert.user_id %></td>
-        <td><%=l concert.created_at %></td>
         <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_concert_path(concert), :class => 'btn btn-default btn-xs' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
                       concert_path(concert),
                       :method => :delete,
@@ -38,5 +34,5 @@
 </table>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
-            new_concert_path,
+            new_user_concert_path(@user),
             :class => 'btn btn-primary' %>
