--- a/app/views/concerts/_index.html.erb
+++ b/app/views/concerts/_index.html.erb
@@ -5,29 +5,17 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
       <th><%= model_class.human_attribute_name(:artist) %></th>
       <th><%= model_class.human_attribute_name(:venue) %></th>
       <th><%= model_class.human_attribute_name(:date) %></th>
-
-
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
     <% @concerts.each do |concert| %>
-      <tr>
-        <td><%= link_to concert.id, concert_path(concert) %></td>
-        <td><%= concert.artist %></td>
+      <!-- <tr data-link="<%= concert_path(concert) %>"> -->
+        <td><%= link_to concert.artist, concert_path(concert) %></td>
         <td><%= concert.venue %></td>
         <td><%= concert.date %></td>
-        <td>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      concert_path(concert),
-                      :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-xs btn-danger' %>
-        </td>
       </tr>
     <% end %>
   </tbody>
