add carpool and meetup buttons. Link to events index

--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -14,6 +14,8 @@
   <dd><%= @concert.user_id %></dd>
 </dl>
 
+<%= link_to 'Carpool', user_events_path(@user), class: 'btn btn-primary' %>
+<%= link_to 'Meetup', user_events_path(@user), class: 'btn btn-primary' %>
 
 <%= link_to t('.edit', :default => t("helpers.links.edit")),
               edit_concert_path(@concert), :class => 'btn btn-default' %>
