--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -42,5 +42,5 @@
 </table>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
-            new_event_path,
+            new_user_event_path(params[:user_id]),
             :class => 'btn btn-primary' %>
