Reset the seed to tie multiple messages to an event id, set up routes for, added button for new meetup, and add button.

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -34,5 +34,5 @@
 </table>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
-            new_message_path,
+            new_user_message_path,
             :class => 'btn btn-primary' %>
