--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -28,6 +28,7 @@
             <td><%= event.concert_id %></td>
             <td><%=l event.created_at %></td>
             <td>
+              <%= link_to 'Join', user_messages_path(event, params[:user_id]), class: 'btn btn-default btn-xs'  %>
               <%= link_to t('.edit', :default => t("helpers.links.edit")),
                           edit_event_path(event), :class => 'btn btn-default btn-xs' %>
               <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
@@ -40,7 +41,4 @@
     <% end %>
   </tbody>
 </table>
-
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_user_event_path(params[:user_id]),
-            :class => 'btn btn-primary' %>
+<%= link_to 'New Meetup', new_user_event_path(params[:user_id]), class: 'btn btn-primary' %>
