--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -10,12 +10,10 @@
   <dd><%= @concert.venue %></dd>
   <dt><strong><%= model_class.human_attribute_name(:date) %>:</strong></dt>
   <dd><%= @concert.date %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:user_id) %>:</strong></dt>
-  <dd><%= @concert.user_id %></dd>
 </dl>
 
-<%= link_to 'Carpool', user_events_path(@user, @carpool), class: 'btn btn-primary' %>
-<%= link_to 'Meetup', user_events_path(@user), class: 'btn btn-primary' %>
+<%= link_to 'Carpool', user_events_path(@concert, @carpool), class: 'btn btn-primary' %>
+<%= link_to 'Meetup', user_events_path(@concert), class: 'btn btn-primary' %>
 
 <%= link_to t('.edit', :default => t("helpers.links.edit")),
               edit_concert_path(@concert), :class => 'btn btn-default' %>
