--- a/app/views/concerts/_index.html.erb
+++ b/app/views/concerts/_index.html.erb
@@ -13,7 +13,7 @@
   <tbody>
     <% @concerts.each do |concert| %>
       <!-- <tr data-link="<%= concert_path(concert) %>"> -->
-        <td><%= link_to concert.artist, concert_path(concert) %></td>
+        <td><%= link_to concert.artist, concert_path(concert, @user) %></td>
         <td><%= concert.venue %></td>
         <td><%= concert.date %></td>
       </tr>
