Create partial for map, render partial on events index

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -41,4 +41,6 @@
     <% end %>
   </tbody>
 </table>
+
+<%= render 'map' %>
 <%= link_to 'New Meetup', new_user_event_path(params[:user_id]), class: 'btn btn-primary' %>
