--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -41,6 +41,8 @@
     <% end %>
   </tbody>
 </table>
-
-<%= render 'map' %>
 <%= link_to 'New Meetup', new_user_event_path(params[:user_id]), class: 'btn btn-primary' %>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA2J6ZL433xkOnMv5zhsr7sQkGg4TYP0Dg&callback=initMap"
+ async defer></script>
+<%= render 'map' %>
