--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -4,7 +4,6 @@
 </div>
 <table class="table table-striped">
   <thead>
-        <tr>
           <th><%= model_class.human_attribute_name(:id) %></th>
           <th><%= model_class.human_attribute_name(:is_carpool) %></th>
           <th><%= model_class.human_attribute_name(:is_meetup) %></th>
@@ -14,11 +13,10 @@
           <th><%= model_class.human_attribute_name(:concert_id) %></th>
           <th><%= model_class.human_attribute_name(:created_at) %></th>
           <th><%=t '.actions', :default => t("helpers.actions") %></th>
-        </tr>
   </thead>
   <tbody>
     <% @events.each do |event| %>
-          <tr>
+      <tr onclick="location.href='<%= user_messages_path(event) %>'">
             <td><%= link_to event.id, event_path(event) %></td>
             <td><%= event.is_carpool %></td>
             <td><%= event.is_meetup %></td>
@@ -37,7 +35,7 @@
                           :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                           :class => 'btn btn-xs btn-danger' %>
             </td>
-          </tr>
+        </tr>
     <% end %>
   </tbody>
 </table>
