Added hover color to tr clicks on user profile, carpool, and meetup page.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,7 @@
  *= require_tree .
  *= require_self
  */
+
+ .table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
+  background-color: #3071a9;
+}
