--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -2,7 +2,7 @@
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
 </div>
-<table class="table table-striped">
+<table class="table table-striped table-hover">
   <thead>
           <th><%= model_class.human_attribute_name(:id) %></th>
           <th><%= model_class.human_attribute_name(:is_carpool) %></th>
@@ -17,7 +17,7 @@
   <tbody>
     <% @events.each do |event| %>
       <tr onclick="location.href='<%= user_messages_path(event) %>'">
-            <td><%= link_to event.id, event_path(event) %></td>
+            <td><%= event.id %></td>
             <td><%= event.is_carpool %></td>
             <td><%= event.is_meetup %></td>
             <td><%= event.time %></td>
