Add some nice styling to map and wrap map in map container div and fix height to 100%

--- a/app/views/events/_map.html.erb
+++ b/app/views/events/_map.html.erb
@@ -1,6 +1,8 @@
 <br/>
 <h1>MAP</h1>
+<div id='map-container'>
 <div id='map'></div>
+</div>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA2J6ZL433xkOnMv5zhsr7sQkGg4TYP0Dg&callback=initMap"
  async defer></script>
