--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -3,13 +3,17 @@
   They will automatically be included in application.css.
 */
 
- html, body {
+ #map {
    height: 100%;
-   margin: 0;
-   padding: 0;
+   width: auto;
  }
 
- #map {
+ #map-container {
    height: 100vh;
-   width: auto;
+   border-radius: 16px 16px;
+   border-color: #fff;
+   border-style: solid;
+   box-shadow: 2px 2px 10px #B1B1B1;
+   margin-top: 25px;
+   border-width: 7px;
  }
