Add geocoding service from google api, fix div container to contain map, adjust map height to 88%, not perfect but ok for now

--- a/app/views/events/_map.html.erb
+++ b/app/views/events/_map.html.erb
@@ -1,8 +1,16 @@
 <br/>
 <h1>MAP</h1>
+<h5>Here are the carpools in your area! If you'd like to carpool, enter your pickup location below.</h5>
 <div id='map-container'>
-<div id='map'></div>
+  <div id="floating-panel">
+    <input id="address" type="textbox" value="Sydney, NSW">
+    <input id="submit" type="button" value="Submit">
+<!-- Reverse geocode -->
+    <!-- <input id="latlng" type="text" value="40.714224,-73.961452">
+    <input id="submit" type="button" value="Reverse Geocode"> -->
+  </div>
+  <div id='map'></div>
 </div>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA2J6ZL433xkOnMv5zhsr7sQkGg4TYP0Dg&callback=initMap"
- async defer></script>
+async defer></script>
