--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -4,11 +4,12 @@
 */
 
  #map {
-   height: 100%;
+   height: 85%;
    width: auto;
  }
 
  #map-container {
+   overflow: auto;
    height: 100vh;
    border-radius: 16px 16px;
    border-color: #fff;
@@ -16,4 +17,17 @@
    box-shadow: 2px 2px 10px #B1B1B1;
    margin-top: 25px;
    border-width: 7px;
+ }
+ #floating-panel {
+   z-index: 5;
+   background-color: #fff;
+   padding: 5px;
+   text-align: center;
+   font-family: 'Roboto','sans-serif';
+   line-height: 30px;
+   padding-left: 10px;
+ }
+
+ #latlng {
+   width: 225px;
  }
