--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,8 +49,12 @@
         <a class="navbar-brand" href="#">ConcertApp</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
+            <% if logged_in? %>
             <li><%= link_to "My Profile", user_path(current_user.id) %></li>
             <li><%= link_to "Logout", :controller=> "sessions", :action=> "destroy" %></li>
+            <% else %>
+            <li><%= link_to "Login", :controller=> "sessions", :action=> "create" %></li>
+            <% end %>
           </ul>
         </div>
       </div>
