add pin drop functionality to map, hardcode variables with marker locations

--- a/app/views/events/_map.html.erb
+++ b/app/views/events/_map.html.erb
@@ -3,6 +3,7 @@
 <h5>Here are the carpools in your area! If you'd like to carpool, enter your pickup location below.</h5>
 <div id='map-container'>
   <div id="floating-panel">
+    <button id="drop" onclick="drop()">See Carpools</button>
     <input id="address" type="textbox" value="Sydney, NSW">
     <input id="submit" type="button" value="Submit">
 <!-- Reverse geocode -->
@@ -13,4 +14,5 @@
 </div>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA2J6ZL433xkOnMv5zhsr7sQkGg4TYP0Dg&callback=initMap"
-async defer></script>
+async defer>
+</script>
