Update value on input tag for map

--- a/app/views/events/_map.html.erb
+++ b/app/views/events/_map.html.erb
@@ -4,7 +4,7 @@
 <div id='map-container'>
   <div id="floating-panel">
     <button id="drop" onclick="drop()">See Carpools</button>
-    <input id="address" type="textbox" value="Sydney, NSW">
+    <input id="address" type="textbox" value="Type address here">
     <input id="submit" type="button" value="Submit">
 <!-- Reverse geocode -->
     <!-- <input id="latlng" type="text" value="40.714224,-73.961452">
