Added Going button to Concert Index page and code to prevent from showing on User show page

--- a/app/views/concerts/_index.html.erb
+++ b/app/views/concerts/_index.html.erb
@@ -16,6 +16,9 @@
           <td><%= concert.artist %></td>
           <td><%= concert.venue %></td>
           <td><%= concert.date %></td>
+          <% unless @hide_going_button %>
+          <td><%= link_to 'Going', user_path(current_user.id), class: 'btn btn-default btn-xs'  %></td>
+          <% end %>
       </tr>
     <% end %>
   </tbody>
