--- a/app/views/concerts/_form.html.erb
+++ b/app/views/concerts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @concert, :html => { :class => "form-horizontal concert" } do |f| %>
+x<%= form_for @concert, :html => { :class => "form-horizontal concert" } do |f| %>
 
   <% if @concert.errors.any? %>
     <div id="error_expl" class="panel panel-danger">
