--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -16,7 +16,7 @@
       </div>
     </div>
     <% end %>
-    
+
     <div class="form-group">
       <%= f.label :name, :class => 'control-label col-lg-2' %>
       <div class="col-lg-10">
@@ -41,7 +41,7 @@
     <div class="form-group">
       <%= f.label :password, :class => 'control-label col-lg-2' %>
       <div class="col-lg-10">
-        <%= f.text_field :password, :class => 'form-control' %>
+        <%= f.text_field :password, :class => 'form-control', :type => 'password'%>
       </div>
       <%=f.error_span(:password) %>
     </div>
@@ -50,7 +50,7 @@
       <div class="col-lg-offset-2 col-lg-10">
         <%= f.submit nil, :class => 'btn btn-primary' %>
         <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-        users_path, :class => 'btn btn-default' %>
+        login_path, :class => 'btn btn-default' %>
       </div>
     </div>
 
