--- a/app/views/concerts/_index.html.erb
+++ b/app/views/concerts/_index.html.erb
@@ -1,22 +1,24 @@
-<%- model_class = Concert -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
-</div>
-<table class="table table-striped table-hover">
-  <thead>
-    <tr>
-      <th><%= model_class.human_attribute_name(:artist) %></th>
-      <th><%= model_class.human_attribute_name(:venue) %></th>
-      <th><%= model_class.human_attribute_name(:date) %></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @concerts.each do |concert| %>
-      <tr onclick="location.href='<%= concert_path(concert) %>'">
-          <td><%= concert.artist %></td>
-          <td><%= concert.venue %></td>
-          <td><%= concert.date %></td>
+<div class="concert-index">
+  <%- model_class = Concert -%>
+  <div class="page-header">
+    <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+  </div>
+  <table class="table table-striped table-hover">
+    <thead>
+      <tr>
+        <th><%= model_class.human_attribute_name(:artist) %></th>
+        <th><%= model_class.human_attribute_name(:venue) %></th>
+        <th><%= model_class.human_attribute_name(:date) %></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @concerts.each do |concert| %>
+        <tr onclick="location.href='<%= concert_path(concert) %>'">
+            <td><%= concert.artist %></td>
+            <td><%= concert.venue %></td>
+            <td><%= concert.date %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
