--- a/app/views/concerts/_search.html.erb
+++ b/app/views/concerts/_search.html.erb
@@ -1,23 +1,25 @@
-<h1>Search for Concerts</h1>
-<%= form_tag search_concerts_path, remote: true, method: :get, id: 'concert-lookup-form' do %>
-  <div class="form-group row no-padding text-center col-md-12">
-    <div class="col-md-10">
-      <%= text_field_tag :artist_name, params[:artist], placeholder: "Search by Artist", autofocus: true, class: "form-control search-box input-lg" %>
+<div id="search-container" class="alert alert-warning">
+  <h1>Search for Concerts</h1>
+  <%= form_tag search_concerts_path, remote: true, method: :get, id: 'concert-lookup-form' do %>
+    <div class="form-group row no-padding text-center col-md-12">
+      <div class="col-md-10">
+        <%= text_field_tag :artist_name, params[:artist], placeholder: "Search by Artist", autofocus: true, class: "form-control search-box input-lg" %>
+      </div>
+      <%= button_tag(type: :submit, class: "btn btn-md btn-primary") do %>
+        <i class="fa fa-search"></i> Look up Concerts
+      <% end %>
     </div>
-    <%= button_tag(type: :submit, class: "btn btn-md btn-primary") do %>
-      <i class="fa fa-search"></i> Look up Concerts
-    <% end %>
+  <% end %>
+  <%= render 'common/spinner' %>
+
+  <div  class="well results-block">
+    <table  id="concert-lookup-results" class="table table-striped table-hover">
+
+
+    </table>
   </div>
-<% end %>
-<%= render 'common/spinner' %>
-
-<div  class="well results-block">
-  <table style="width:100%" id="concert-lookup-results" class="table table-striped table-hover">
 
 
-  </table>
-</div>
-
-
-  <div id="concert-lookup-errors"></div>
-</div>
+    <div id="concert-lookup-errors"></div>
+  </div>
+</div><!-- #search-container -->
