--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -18,7 +18,7 @@
       <%= f.submit "Log In", class:"btn btn-primary" %>
     <% end %>
     <br>
-    <p class="new-user">New user? <%= link_to "Sign up now!", new_user_path %></p>
+    <p class="new-user">New user? <%= link_to "Sign up now!", new_user_path, class: "label label-info" %></p>
   </div>
 </div>
 
