Centered search bar and made it col-md-8. Change body (before yield) to col-lg-12. Add date to search result table.

--- a/app/views/concerts/search.js.erb
+++ b/app/views/concerts/search.js.erb
@@ -4,10 +4,10 @@
 // $('#stock-lookup-results').append("<p>Test</p>");
 $('#artist_name').val("");
 
-$('#concert-lookup-results').show().append('<tr><th>Venue</th><th>City</th><th></th></tr>')
+$('#concert-lookup-results').show().append('<tr><th>Venue</th><th>City</th><th></th><th>Date</th></tr>')
 
 hide_spinner();
 
 <% @json['response']['gigs'].each do |item| %>
-$('#concert-lookup-results').append('<tr><td><%= item["venue"]["name"] %></td><td><%= item["venue"]["location"]["city"] %></td><td><%= link_to "Add to my concerts", root_path, class: "btn btn-xs btn-primary", method: :post %></td></tr>');
+$('#concert-lookup-results').append('<tr><td><%= item["venue"]["name"] %></td><td><%= item["venue"]["location"]["city"] %></td><td><%= item["startDate"]%></td><td><%= link_to "Add to my concerts", root_path, class: "btn btn-xs btn-primary", method: :post %></td></tr>');
 <% end %>
