--- a/app/views/concerts/_search.html.erb
+++ b/app/views/concerts/_search.html.erb
@@ -2,10 +2,10 @@
   <h1>Search for Concerts</h1>
   <%= form_tag search_concerts_path, remote: true, method: :get, id: 'concert-lookup-form' do %>
     <div class="form-group row no-padding text-center col-md-12">
-      <div class="col-md-10">
+      <div class="col-md-8 col-md-offset-2" >
         <%= text_field_tag :artist_name, params[:artist], placeholder: "Search by Artist", autofocus: true, class: "form-control search-box input-lg" %>
       </div>
-      <%= button_tag(type: :submit, class: "btn btn-md btn-primary") do %>
+      <%= button_tag(type: :submit, class: "btn btn-md btn-primary",id: "search-submit") do %>
         <i class="fa fa-search"></i> Look up Concerts
       <% end %>
     </div>
