--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -45,4 +45,6 @@
 </table>
 <%= link_to 'New Meetup', new_user_event_path(params[:user_id]), class: 'btn btn-primary' %>
 
-<%= render 'map' %>
+<% if @carpool %>
+  <%= render 'map' %>
+<% end %>
