Added Going button to Index page

--- a/app/views/concerts/_index.html.erb
+++ b/app/views/concerts/_index.html.erb
@@ -13,12 +13,17 @@
   </thead>
   <tbody>
     <% @concerts.each do |concert| %>
-      <tr onclick="location.href='<%= concert_path(concert) %>'">
+      <tr>
+          <div onclick="location.href='<%= concert_path(concert) %>'">
           <td><%= concert.artist %></td>
           <td><%= concert.venue %></td>
           <td><%= concert.date.strftime("%A, %b %d at %I %p").downcase %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+          </div>
+          <% unless @hide_going_button %>
+          <td><%= link_to 'Going', user_path(@user), class: 'btn btn-default btn-xs' %></td>
+          <% end %>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 </div>
