mess with google geocode

--- a/app/views/events/_map.html.erb
+++ b/app/views/events/_map.html.erb
@@ -4,14 +4,17 @@
 <div id='map-container'>
   <div id="floating-panel">
     <button id="drop" onclick="drop()">See Carpools</button>
-    <input id="address" type="textbox" value="Type address here">
-    <input id="submit" type="button" value="Submit">
+    <input id="address" type="textbox" value="">
+    <input id="submit" type="button" value="Submit carpool address">
 <!-- Reverse geocode -->
-    <!-- <input id="latlng" type="text" value="40.714224,-73.961452">
-    <input id="submit" type="button" value="Reverse Geocode"> -->
+    <input id="latlng" type="text" value="40.714224,-73.961452">
+    <input id="submit" type="button" value="Reverse Geocode">
   </div>
   <div id='map'></div>
 </div>
+
+<input id="location_lat"></input>
+<input id="location_lng"></input>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA2J6ZL433xkOnMv5zhsr7sQkGg4TYP0Dg&callback=initMap"
 async defer>
