--- a/app/views/concerts/search.js.erb
+++ b/app/views/concerts/search.js.erb
@@ -8,6 +8,7 @@ $('#concert-lookup-results').show().append('<caption><h2><%= @json["response"]["
 
 hide_spinner();
 
+
 <% @json['response']['gigs'].each do |item| %>
-  $('#concert-lookup-results').append('<tr><td><%= item["venue"]["name"] %></td><td><%= item["venue"]["location"]["city"] %></td><td><%= item["startDate"].to_time.strftime("%A, %b %d at %I %p")%></td><td><%= link_to "Add to my concerts", root_path, class: "btn btn-xs btn-primary", method: :post %></td></tr>');
+  $('#concert-lookup-results').append('<tr><td><%= item["venue"]["name"] %></td><td><%= item["venue"]["location"]["city"] %></td><td><%= item["startDate"].to_time.strftime("%A, %b %d at %I %p")%></td><td><%= button_to "Add to my Concerts", action:"create", controller: "concerts", user_id: params[:user_id], artist: @json["response"]["gigs"][0]["name"], venue: item["venue"]["name"], date: item["startDate"].to_time, user_id: params[:user_id]%></td></tr>');
 <% end %>
