fix carpool submit event to add carpool attr to event

--- a/app/views/events/_map.html.erb
+++ b/app/views/events/_map.html.erb
@@ -6,14 +6,15 @@
   <div id="floating-panel">
     <button id="drop" onclick="drop()">See Carpools</button>
     <input id="address" type="textbox" value="">
-    <input name="id" value="<%= @concert.id %>">
-    <input name="user_id" value="<%=params[:user_id]%>">
+    <input type="hidden" name="id" value="<%= @concert.id %>">
+    <input type="hidden" name="user_id" value="<%=params[:user_id]%>">
+    <input name="carpool" value="carpool">
     <%= f.submit 'Submit', :id => "submit" %>
 <!-- Reverse geocode -->
     <!-- <input id="latlng" type="text" value="40.714224,-73.961452">
     <input id="submit" type="button" value="Reverse Geocode"> -->
   </div>
-  <%= f.text_field :location %>
+  <%= f.hidden_field :location %>
   <div id='map'></div>
 </div>
 
