Functioning Remove concerts button on user profile page

--- a/app/views/concerts/_index.html.erb
+++ b/app/views/concerts/_index.html.erb
@@ -21,8 +21,9 @@
           <td><%= button_to 'Add to Concerts', action:"create", controller:"concerts", user_id: params[:user_id], artist: concert.artist, venue: concert.venue, date: concert.date %></td>
           <% end %>
           <% unless @hide_buttons %>
-          <td><i class="fa fa-car"></i></td>
-          <td><i class="fa fa-users"></i></td>
+          <td><%= link_to 'Remove', concert_path(concert, @user), method: :delete, class: "btn btn-sm btn-primary" %></td>
+          <td><i class="fa fa-car fa-2x"></i></td>
+          <td><i class="fa fa-users fa-2x"></i></td>
           <% end %>
 
       </tr>
