add doc load js to index page, hide show two buttons on carpool page

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -48,3 +48,14 @@
 <% if @carpool %>
   <%= render 'map' %>
 <% end %>
+
+<script>
+  $(document).ready(function(){
+    console.log("hi")
+    $("#confirm_button").hide();
+    $("#submit").click(function() {
+      $("#confirm_button").show();
+      $("#submit").hide();
+    });
+  });
+</script>
