--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,10 +50,10 @@
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
             <% if logged_in? %>
-            <li><%= link_to "My Profile", user_path(current_user.id) %></li>
-            <li><%= link_to "Logout", :controller=> "sessions", :action=> "destroy" %></li>
+              <li><%= link_to "My Profile", user_path(current_user.id) %></li>
+              <li><%= link_to "Logout" {controller: "sessions", action: "destroy"}%></li>
             <% else %>
-            <li><%= link_to "Login", :controller=> "sessions", :action=> "create" %></li>
+              <li><%= link_to "Login", controller: "sessions", action: "create", method: "post" %></li>
             <% end %>
           </ul>
         </div>
