--- a/app/views/concerts/_index.html.erb
+++ b/app/views/concerts/_index.html.erb
@@ -22,8 +22,8 @@
           <% end %>
           <% unless @hide_buttons %>
           <td><%= link_to 'Remove', concert_path(concert, @user), method: :delete, class: "btn btn-sm btn-primary" %></td>
-          <td><i class="fa fa-car fa-2x"></i></td>
-          <td><i class="fa fa-users fa-2x"></i></td>
+          <td><%= link_to user_events_path(concert,{format:"carpool"}) do %><i class="fa fa-car fa-2x"></i><% end %></td>
+          <td><%= link_to user_events_path(@user) do %><i class="fa fa-users fa-2x"></i><% end %></td>
           <% end %>
 
       </tr>
