Fixed modal sign up button. Added error to wrong info @ sign up

--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -18,14 +18,11 @@
       <%= f.submit "Log In", class:"btn btn-primary" %>
     <% end %>
     <br>
-    <p class="new-user">New user? <%= link_to "Sign up now!", new_user_path, class: "label label-info" %></p>
+    <p class="new-user">New user? <button type="button" class="label label-info" id="myBtn">Sign up now!</button>
   </div>
 </div>
 
 <div id="user-modal" class="modal fade"></div>
-
-
-<button type="button" class="btn btn-info btn-md" id="myBtn">Modal with Overlay (backdrop:true)</button>
 
 
 
