--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -30,7 +30,7 @@
   <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
       <div class="modal-content">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
         <%= form_for @user, :html => { :class => "form-horizontal user" } do |f| %>
 
           <% if @user.errors.any? %>
@@ -80,8 +80,12 @@
           <div class="form-group">
             <div class="col-lg-offset-2 col-lg-10">
               <%= f.submit nil, :class => 'btn btn-primary' %>
+
               <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-              login_path, :class => 'btn btn-default' %>
+              login_path, :class => 'btn btn-default', "data-dismiss" => "modal" %>
+
+
+
             </div>
           </div>
         <% end %>
