--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,5 @@
 <%- model_class = Event -%>
+<% unless @hide_carpool_list %>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
 </div>
@@ -40,6 +41,7 @@
                           :class => 'btn btn-xs btn-danger' %>
             </td>
         </tr>
+<% end %>
     <% end %>
   </tbody>
 </table>
