fix carpool pins to pull from event instances, update event model, thanks a million robert

--- a/app/views/events/_map.html.erb
+++ b/app/views/events/_map.html.erb
@@ -19,6 +19,16 @@
   <div id='map'></div>
 </div>
 
+<% @events.each do |event| %>
+<div class="lats">
+  <%= event.get_lat %>
+</div>
+<div class="lngs">
+  <%= event.get_lng %>
+</div>
+<br/>
+  <% end %>
+
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA2J6ZL433xkOnMv5zhsr7sQkGg4TYP0Dg&callback=initMap"
 async defer>
 </script>
