--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,3 +1,10 @@
+<div class="home_vid">
+<video width="320" height="240" autoplay loop>
+  <source src="movie.mp4" type="video/mp4" />
+  <source src="movie.ogg" type="video/ogg" />
+  Your browser does not support the video tag.
+</video>
+</div>
 
 <h1 id="login">Log In</h1>
 
@@ -31,7 +38,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
-        <%= form_for @user, :html => { :class => "form-horizontal user" } do |f| %>
+        <%= form_for @user, html: { multipart: true, class:"form-horizontal user" } do |f| %>
 
           <% if @user.errors.any? %>
             <div id="error_expl" class="panel panel-danger">
@@ -76,6 +83,12 @@
             </div>
             <%=f.error_span(:password) %>
           </div>
+          <div class="form-group">
+            <%= f.label :Upload_a_profile_image, :class => 'control-label col-lg-2' %>
+            <div class="col-lg-10">
+              <%= f.file_field :image, :class => 'form-control' %>
+            </div>
+            <br>
 
           <div class="form-group">
             <div class="col-lg-offset-2 col-lg-10">
