Pulling new seed

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -46,7 +46,7 @@
   </tbody>
 </table>
 <% unless @hide_new_meetup_button %>
-<%= button_to 'New Meetup', user_messages_path(params[:user_id]), class: 'btn btn-primary' %>
+<%= link_to 'New Meetup', new_user_event_path(params[:user_id]), class: 'btn btn-primary' %>
 <% end %>
 
 <% if @carpool %>
