--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -17,7 +17,7 @@
   </thead>
   <tbody>
     <% @events.each do |event| %>
-      <tr onclick="location.href='<%= user_messages_path(event) %>'">
+      <tr onclick="location.href='<%= event_path(event) %>'">
             <td><%= event.id %></td>
             <td><%= event.is_carpool %></td>
             <td><%= event.is_meetup %></td>
