--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,44 +1,46 @@
 <%- model_class = Event -%>
 <% unless @hide_carpool_list %>
-<div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
-</div>
-<table class="table table-striped table-hover">
-  <thead>
-          <th><%= model_class.human_attribute_name(:description) %></th>
-          <th><%= model_class.human_attribute_name(:location) %></th>
-          <th><%= model_class.human_attribute_name(:time) %></th>
-          <th><%= model_class.human_attribute_name(:concert_id) %></th>
-          <th><%=t '.actions', :default => t("helpers.actions") %></th>
-  </thead>
-  <tbody>
-    <% @events.each do |event| %>
-      <tr onclick="location.href='<%= user_messages_path(event) %>'">
-        <td><%= event.description %></td>
-        <td><%= event.location %></td>
-            <% if event.time %>
-              <td><%= event.time.strftime("%I:%M%p").downcase %></td>
-              <% else %>
-              <td><%= event.time %></td>
-            <% end %>
-            <td><%= event.concert_id %></td>
-            <td>
-              <%= link_to 'Join', user_messages_path(event, params[:user_id]), class: 'btn btn-default btn-xs'  %>
-              <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                          edit_event_path(event), :class => 'btn btn-default btn-xs' %>
-              <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                          event_path(event),
-                          :method => :delete,
-                          :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                          :class => 'btn btn-xs btn-danger' %>
-            </td>
-        </tr>
+  <div class="page-header">
+    <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+  </div>
+  <table class="table table-striped table-hover">
+    <thead>
+            <th><%= model_class.human_attribute_name(:description) %></th>
+            <th><%= model_class.human_attribute_name(:location) %></th>
+            <th><%= model_class.human_attribute_name(:time) %></th>
+            <th><%= model_class.human_attribute_name(:concert_id) %></th>
+            <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </thead>
+    <tbody>
+      <% @events.each do |event| %>
+        <tr onclick="location.href='<%= event_path(event,params[:user_id],{"carpool"=>"false"}) %>'">
+          <td><%= event.description %></td>
+          <td><%= event.location %></td>
+              <% if event.time %>
+                <td><%= event.time.strftime("%I:%M%p").downcase %></td>
+                <% else %>
+                <td><%= event.time %></td>
+              <% end %>
+              <td><%= event.concert_id %></td>
+              <td>
+                <%= link_to 'Join', user_messages_path(event, params[:user_id]), class: 'btn btn-default btn-xs'  %>
+                <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                            edit_event_path(event), :class => 'btn btn-default btn-xs' %>
+                <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                            event_path(event),
+                            :method => :delete,
+                            :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                            :class => 'btn btn-xs btn-danger' %>
+              </td>
+          </tr>
+      <% end %>
+    </tbody>
+  </table>
 <% end %>
-    <% end %>
-  </tbody>
-</table>
+
+
 <% unless @hide_new_meetup_button %>
-<%= link_to 'New Meetup', new_user_event_path(params[:user_id]), class: 'btn btn-primary' %>
+  <%= link_to 'New Meetup', new_user_event_path(params[:user_id]), class: 'btn btn-primary' %>
 <% end %>
 
 <% if @carpool %>
