--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -4,25 +4,24 @@
 </div>
 
 <dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:is_carpool) %>:</strong></dt>
-  <dd><%= @event.is_carpool %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:is_meetup) %>:</strong></dt>
-  <dd><%= @event.is_meetup %></dd>
+
   <dt><strong><%= model_class.human_attribute_name(:time) %>:</strong></dt>
   <dd><%= @event.time %></dd>
   <dt><strong><%= model_class.human_attribute_name(:location) %>:</strong></dt>
   <dd><%= @event.location %></dd>
   <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
   <dd><%= @event.description %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:concert_id) %>:</strong></dt>
-  <dd><%= @event.concert_id %></dd>
+
 </dl>
 
+<% if current_user?(@user) %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                edit_event_path(@event), :class => 'btn btn-default' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                event_path(@event),
+                :method => 'delete',
+                :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                :class => 'btn btn-danger' %>
+<% end %>
 
-<%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_event_path(@event), :class => 'btn btn-default' %>
-<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              user_event_path(@event),
-              :method => 'delete',
-              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-              :class => 'btn btn-danger' %>
+<%= render 'messages/index'%>
