--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,4 +15,5 @@
 </dl>
 
 <%= link_to 'Add Concert', new_user_concert_path(@user), :class => 'btn btn-default' %>
+<%= link_to 'Edit Profile', edit_user_path(@user), :class => 'btn btn-default' %>
 <%= render 'concerts/index' %>
